@@ -114,8 +114,8 @@ struct SerdWriterImpl {
 	SerdStack       anon_stack;
 	SerdWriteFunc   write_func;
 	void*           stream;
-	SerdErrorSink   error_sink;
-	void*           error_handle;
+	SerdLogFunc     log_func;
+	void*           log_handle;
 	WriteContext    context;
 	int             indent;
 	char*           bprefix;
@@ -223,8 +223,9 @@ write_character(SerdWriter* writer, const uint8_t* utf8, size_t* size)
 	const uint32_t c          = parse_utf8_char(utf8, size);
 	switch (*size) {
 	case 0:
-		serd_world_errorf(
-			writer->world, SERD_ERR_BAD_ARG, "invalid UTF-8: %X\n", utf8[0]);
+		SERD_LOG_ERRORF(writer->world, SERD_ERR_BAD_ARG,
+		                "invalid UTF-8: %X\n",
+		                utf8[0]);
 		return sink(replacement_char, sizeof(replacement_char), writer);
 	case 1:
 		snprintf(escape, sizeof(escape), "\\u%04X", utf8[0]);
@@ -590,10 +591,10 @@ write_uri_node(SerdWriter* const        writer,
 
 	if (!has_scheme && !supports_uriref(writer) &&
 	    !serd_env_base_uri(writer->env)) {
-		serd_world_errorf(writer->world,
-		                  SERD_ERR_BAD_ARG,
-		                  "syntax does not support URI reference <%s>\n",
-		                  node_str);
+		SERD_LOG_ERRORF(writer->world,
+		                SERD_ERR_BAD_ARG,
+		                "syntax does not support URI reference <%s>\n",
+		                node_str);
 		return false;
 	}
 
@@ -640,10 +641,9 @@ write_curie(SerdWriter* const        writer,
 	case SERD_NQUADS:
 		if ((st = serd_env_expand_in_place(
 			     writer->env, node, &prefix, &suffix))) {
-			serd_world_errorf(writer->world,
-			                  st,
-			                  "undefined namespace prefix `%s'\n",
-			                  serd_node_string(node));
+			SERD_LOG_ERRORF(writer->world, st,
+			                "undefined namespace prefix `%s'\n",
+			                serd_node_string(node));
 			return false;
 		}
 		sink("<", 1, writer);
@@ -926,8 +926,8 @@ serd_writer_end_anon(SerdWriter*     writer,
 	if (writer->syntax == SERD_NTRIPLES || writer->syntax == SERD_NQUADS) {
 		return SERD_SUCCESS;
 	} else if (serd_stack_is_empty(&writer->anon_stack)) {
-		return serd_world_errorf(writer->world, SERD_ERR_UNKNOWN,
-		                         "unexpected end of anonymous node\n");
+		return SERD_LOG_ERROR(writer->world, SERD_ERR_UNKNOWN,
+		                      "unexpected end of anonymous node\n");
 	}
 
 	write_sep(writer, SEP_ANON_END);
